diy-datacloud/main/default/objects/Customer_Engagement_Feed__dlm/Customer_Engagement_Feed__dlm.object-meta.xml
<CustomObject>
    <label>Customer Engagement Feed</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Customer Engagement Feed</labelOverride>
        <masterLabel>Customer Engagement Feed</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>