diy-datacloud/main/default/objects/Customer_Engagement_Feed__dlm/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Feed</relationshipLabel>
    <relationshipName>CustomerEngagementFeeds</relationshipName>
    <type>Lookup</type>
</CustomField>