diy-datacloud/main/default/objects/Customer_Engagement_Feed__dlm/fields/rel_1770487246366_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1770487246366_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer_Engagement_Feed_CIN_map_sso_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Customer_Engagement_Feed_CIN_map_sso_rel</relationshipLabel>
    <relationshipName>rel_1770487246366_end</relationshipName>
    <type>Lookup</type>
</CustomField>